# lblConvert

./: .gitignore  README.md  install.sh  pyproject.toml
docs/: 数据操作说明.md
lblConvert/: __init__.py
lblConvert/converter/: __init__.py  detect.py  yoloLblModify.py
lblConvert/scripts/: base.py  cli.py
lblConvert/tools/: __init__.py  lblTools.py  readLbl.py  saveLbl.py
